--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,8 @@ services:
     volumes:
       - type: volume
         source: ./app
-        target: /usr/src/mymaven/boxfuse-sample-java-war-hello/target
+        target: /home/target/
 
 volumes:
   app:
+---
