--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,15 @@ version: '3.7'
 services:
   webapp:
     image: tomcat:8.0-alpine
-    container_name: web_app
     ports:
       - "80:8080"
     volumes:
       - type: volume
-        source: ./app/
+        source: ./app/i
         target: /usr/local/tomcat/webapps/
 
   build_app:
     build:
-      container_name: build_app
       context: ./
       dockerfile: Dockerfile
     volumes:
