--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
       context: ./
       dockerfile: Dockerfile
     volumes:
-      - ./app:/home/target
+      - app:/home/target
   webapp:
     image: tomcat:8.0-alpine
     ports:
       - "80:8080"
     volumes:
-      - ./app:/usr/local/tomcat/webapps
+      - app:/usr/local/tomcat/webapps
 volumes:
   app:
